--- a/.github/workflows/deploy_to_railway.yml
+++ b/.github/workflows/deploy_to_railway.yml
@@ -15,6 +15,9 @@ jobs:
 
       - uses: Swatinem/rust-cache@v2
 
+      - name: Check formatting
+        run: cargo clippy --all-targets --all-features -- -Dwarnings
+
       - name: Test application
         run: cargo test
 
